--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,28 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tech-Blog</title>
+    <title>The Tech Blog</title>
+    <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
+
 <body>
-    <header>
-        <h1>
-            <a href="/dashboard">Dashboard</a>
-        </h1>
-        <nav>    
-            <button id="logout" class="login_button">Logout</button>
-            {{else}}
-            <a href="login">Login</a>
-            {{if}}
-        </nav>
-    </header>
-    <main>
-        {{{ body }}}
-    </main>
+    <div class="wrapper">
+        <header>
+            <h1>
+                <a href="/">home</a>
+            </h1>
+            <nav>
+                {{#if loggedIn}}
+                <a href="/dashboard">dashboard</a>
+                <button id="logout" class="btn-no-style logout">logout</button>
+                {{else}}
+                <a href="/login">login</a>
+                {{/if}}
+            </nav>
+        </header>
+        <div class="site-row">
+            <div class="site-name">
+                <h1>The Tech Blog</h1>
+            </div>
+        </div>
+        <main>
+            {{{ body }}}
+        </main>
+    </div>
 
     {{#if loggedIn}}
-    <scrip src="/public/javascript/logout.js"></scrip>
+    <script src="/javascript/logout.js"></script>
     {{/if}}
 </body>
+
 </html>
