--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,41 +1,40 @@
-<!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Tech Blog</title>
-    <link rel="stylesheet" href="/css/style.css">
-</head>
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
 
-<body>
+  <body>
     <div class="wrapper">
-        <header>
-            <h1>
-                <a href="/">Home</a>
-            </h1>
-            <nav>
-                {{#if loggedIn}}
-                <a href="/dashboard">Dashboard</a>
-                <button id="logout" class="btn-no-style logout">Logout</button>
-                {{else}}
-                <a href="/login">Login</a>
-                {{/if}}
-            </nav>
-        </header>
-        <div class="site-row">
-            <div class="site-name">
-                <h1>Tech Blog</h1>
-            </div>
+      <header>
+        <h1>
+          <a href="/">Home</a>
+        </h1>
+        <nav>
+          {{#if loggedIn}}
+            <a href="/dashboard">Dashboard</a>
+            <button id="logout" class="btn-no-style logout">Logout</button>
+          {{else}}
+            <a href="/login">Login</a>
+          {{/if}}
+        </nav>
+      </header>
+      <div class="site-row">
+        <div class="site-name">
+          <h1>Tech Blog</h1>
         </div>
-        <main>
-            {{{ body }}}
-        </main>
+      </div>
+      <main>
+        {{{body}}}
+      </main>
     </div>
 
     {{#if loggedIn}}
-    <script src="/javascript/logout.js"></script>
+      <script src="/javascript/logout.js"></script>
     {{/if}}
-</body>
+  </body>
 
 </html>
